additional dcrandroid updates

--- a/journal/201811.md
+++ b/journal/201811.md
@@ -21,15 +21,9 @@ Amidst the excitement, growth and change in the community, Decred development co
 
 [Politeia](https://github.com/decred/politeia): While an active month of proposals and voting was taking place on the [Politeia site](https://proposals.decred.org/) the development team was hard at work in the background making refinements, improvements, and adding features.  Refinements included [highlighting new comments](https://github.com/decred/politeiagui/pull/897), improving the [vetted proposal lookup](https://github.com/decred/politeia/pull/613) and general performance and UI updates. The community and development team collaborated to improve security by [patching a vulnerability](https://github.com/decred/politeia/issues/563), applying a [general security improvement](https://github.com/decred/politeiagui/issues/917), and making privacy improvements to [politeiavoter](https://github.com/decred/politeia/tree/master/politeiavoter). By popular demand an [email notification system](https://github.com/decred/politeiagui/pull/919) was created to support awareness about comments and new proposals. Easy verifications were made possible by the [search by ticket](https://github.com/decred/politeiagui/pull/899) feature which will allow voters to verify votes cast with an independent lookup.
 
-[Android](https://github.com/decred/dcrandroid): Development of the Decred Mobile Wallet for Android by Raedah Group took a leap forward this month with an pre-release version available on the [Google Play store](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet).  The Play Store version includes updated QR code usage for compatibility with other applications in response to the community needs for payments and trades on the go.  This version also includes a security menu which allows users to [sign messages](https://github.com/decred/dcrandroid/issues/226) proving ownership of addresses. Another community sourced innovation successfully implemented by Raedah Group is the ["Hidden Account" feature](https://github.com/decred/dcrandroid/issues/175).  Hidden accounts allow mobile users to keep funds in their mobile wallet which will not be displayed on the main screen balance total.  Community members buying and selling Decred at local meetups are excited for the added privacy and security this feature offers.  Fund transfer between accounts also got an upgrade this month with simple [dropdown selection](https://github.com/decred/dcrandroid/issues/119) ensuring balance changes are quick and easy.
+[Android](https://github.com/decred/dcrandroid): Development of the Decred Mobile Wallet for Android a leap forward this month with an pre-release version available on the [Google Play store](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet).  The Play Store version includes updated currency conversion including [local currency for fee](https://github.com/decred/dcrandroid/issues/192) when available and [advanced password protection](https://github.com/decred/dcrandroid/issues/134) including the ability to [lock all data](https://github.com/decred/dcrandroid/issues/187) and to use an [access pin code](https://github.com/decred/dcrandroid/issues/180).  This version also includes a security menu which allows users to [sign messages](https://github.com/decred/)dcrandroid/issues/226) proving ownership of addresses. Another community sourced innovation successfully implemented is the ["Hidden Account" feature](https://github.com/decred/dcrandroid/issues/175).  Hidden accounts allow mobile users to keep funds in their mobile wallet which will not be displayed on the main screen balance total.  Community members buying and selling Decred at local meetups are excited for the added privacy and security this feature offers.  Fund transfer between accounts also got an upgrade this month with simple [dropdown selection](https://github.com/decred/dcrandroid/issues/119) ensuring balance changes are quick and easy.
 
-[iOS](https://github.com/raedahgroup/dcrios):
-
-* QR Code scanning enabled for transactions.
-* Top to bottom redesign to match latest design elements.
-* Full transaction details added to match detail level of desktop wallet.
-
-
+[iOS](https://github.com/raedahgroup/dcrios): The iOS Mobile Wallet is currently in beta testing and will require additonal development cycles to incorporate the feature set available on Android.
 
 [dcrdata](https://github.com/decred/dcrdata):
 
