--- a/journal/201811.md
+++ b/journal/201811.md
@@ -25,15 +25,7 @@ Amidst the excitement, growth and change in the community, Decred development co
 
 [iOS](https://github.com/raedahgroup/dcrios): The iOS Mobile Wallet is currently in beta testing and will require additonal development cycles to incorporate the feature set available on Android.
 
-[dcrdata](https://github.com/decred/dcrdata):
-
-* Check if "Graphical Block Display" is complete by month end, tests just launched.
-* Check work on OPRETURN and "Side Chain" forward compatibility.
-* {what is pub/sub event hub #806?}
-* @gozart is refactoring the app into es6 modules #805
-* large refactoring by @gozart: css to scss and more https://github.com/decred/dcrdata/pull/839
-* For consistency with the Insight links, you can now access mainnet dcrdata at https://mainnet.dcrdata.org/
-* hashrate and chainwork charts https://github.com/decred/dcrdata/pull/808
+[dcrdata](https://github.com/decred/dcrdata): Our native [goLang block explorer](https://explorer.dcrdata.org) is becoming a one-stop shop for all data Decred.  New features integrated into the base code this month include a [network hashrate chart](https://github.com/decred/dcrdata/issues/723), the addition of the [Decred Treasury](https://github.com/decred/dcrdata/issues/784) and more detailed transaction information like [spent with mempool txs](https://github.com/decred/dcrdata/issues/825), [tx type on address view]{https://github.com/decred/dcrdata/issues/741) and improved [timestamp information](https://github.com/decred/dcrdata/issues/776).  Community excitement has spurred a few additional features in [beta](https://beta.dcrdata.org) including [consensus voting results](https://beta.dcrdata.org/agendas), [xpub support](https://github.com/decred/dcrdata/issues/677), [transaction fee charts](https://github.com/decred/dcrdata/issues/671) and more.  Stay tuned for further developments next month!
 
 [dcrstakepool](https://github.com/decred/dcrstakepool):
 
