--- a/journal/201811.md
+++ b/journal/201811.md
@@ -12,29 +12,40 @@ Amidst the excitement, growth and change in the community, Decred development co
 
 {per-project summary, drop items without updates}
 
-[dcrd](https://github.com/decred/dcrd): This month developers merged [reversed UTXO set semantics](https://github.com/decred/dcrd/pull/1471), an important change that provides simpler handling by all the Decred nodes around the world resulting improved effeciency (for example full block tests run 40% faster). A [database migration](https://github.com/decred/dcrd/pull/1520) will be added in the next major release to capitolize on the improvements after extensive testing is completed.
+[dcrd](https://github.com/decred/dcrd): [Reversed UTXO set semantics](https://github.com/decred/dcrd/pull/1471) was merged, an important change that provides simpler and more efficient handling of unspent outputs. A side effect of this is that full block reorganization tests run 40% faster. An accompanying [database migration](https://github.com/decred/dcrd/pull/1520) is merged and will be added in the next major release.
 
 [dcrwallet](https://github.com/decred/dcrwallet): As usage has increased the number of addresses watched by default has become too limited for some and configuration file modification for dcrwallet was required as a workaround. This [address watching issue](https://github.com/decred/dcrwallet/pull/1320) was fixed by default this month. Additional rare use case fixes included potential [missed or double spent transactions](https://github.com/decred/dcrwallet/pull/1321) and [improvement of locked balance calculations](https://github.com/decred/dcrwallet/pull/1330).
 
-[Decrediton](https://github.com/decred/decrediton): To ensure continued cross-platform stability and performance Decrediton was [updated to Electron 3](https://github.com/decred/decrediton/pull/1777) this month. Display of the Decred [Treasury balance](https://github.com/decred/decrediton/pull/1777) was added. The [Decred Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) holds the funds for use in project development. General [loading optimizations](https://github.com/decred/decrediton/pull/1825) and optimizations specific to [large wallets](https://github.com/decred/decrediton/pull/1727) were completed ensuring continued fast performace as wallets scale in size. Several ticket buying optimizations were included in the [ticketbuyer v2](https://github.com/decred/decrediton/pull/1744) and will be included in the next release of Decrediton.  Voting and proposal integration saw improvements as well including [notifications for new proposals and votes](https://github.com/decred/decrediton/pull/1835). In addition to the function and performance of Decrediton, the UI/UX saw significant tuneups this month including [general design improvements](https://github.com/decred/decrediton/issues/1818), adjustments for readability like [resizing](https://github.com/decred/decrediton/issues/1826) and [icons](https://github.com/decred/decrediton/issues/1811), and improvements to the [navigation and animation](https://github.com/decred/decrediton/issues/1809).
-[Trezor](https://blog.trezor.io/firmware-updates-2-0-9-and-1-7-1-developed-by-the-community-for-the-community-c4b965741ca3): On a related note, Model T firmware version 2.0.9 was [released](https://blog.trezor.io/firmware-updates-2-0-9-and-1-7-1-developed-by-the-community-for-the-community-c4b965741ca3) with Decred support. Cheers @matheusd for making it happen! Now our Decrediton developers can work on the integration.
+* {not clear from pr 1320 that it has something to do with config defaults or config file}
 
-[Politeia](https://github.com/decred/politeia): While an active month of proposals and voting was taking place on the [Politeia site](https://proposals.decred.org/) the development team was hard at work in the background making refinements, improvements, and adding features.  Refinements included [highlighting new comments](https://github.com/decred/politeiagui/pull/897), improving the [vetted proposal lookup](https://github.com/decred/politeia/pull/613) and general performance and UI updates. The community and development team collaborated to improve security by [patching a vulnerability](https://github.com/decred/politeia/issues/563), applying a [general security improvement](https://github.com/decred/politeiagui/issues/917), and making privacy improvements to [politeiavoter](https://github.com/decred/politeia/tree/master/politeiavoter). By popular demand an [email notification system](https://github.com/decred/politeiagui/pull/919) was created to support awareness about comments and new proposals. Easy verifications were made possible by the [search by ticket](https://github.com/decred/politeiagui/pull/899) feature which will allow voters to verify votes cast with an independent lookup.
+[Decrediton](https://github.com/decred/decrediton): To ensure continued cross-platform stability and performance Decrediton was [updated to Electron 3](https://github.com/decred/decrediton/pull/1777). Display of the Decred [Treasury balance](https://github.com/decred/decrediton/pull/1777) was added. Startup performance of [large wallets](https://github.com/decred/decrediton/pull/1727) was improved. Automatic ticket buying was switched to [ticketbuyer v2](https://github.com/decred/decrediton/pull/1744). It has less options and is simpler to use than v1 thanks to the stabilized ticket prices. Now all user needs to specify is balance to maintain, account and stakepool to use. Politeia integration saw improvements as well including [more responsive](https://github.com/decred/decrediton/pull/1825) proposal loading and [notifications for new proposals and votes](https://github.com/decred/decrediton/pull/1835). The UI/UX saw some tuneups this month including [overview design improvements](https://github.com/decred/decrediton/issues/1818), updated [account icons](https://github.com/decred/decrediton/issues/1811) and improvements to the [navigation icons and microanimations](https://github.com/decred/decrediton/issues/1809). The features mentioned were merged into the master branch and will be available in the next release of Decrediton.
 
-[Android](https://github.com/decred/dcrandroid): Development of the Decred Mobile Wallet for Android a leap forward this month with an pre-release version available on the [Google Play store](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet).  The Play Store version includes updated currency conversion including [local currency for fee](https://github.com/decred/dcrandroid/issues/192) when available and [advanced password protection](https://github.com/decred/dcrandroid/issues/134) including the ability to [lock all data](https://github.com/decred/dcrandroid/issues/187) and to use an [access pin code](https://github.com/decred/dcrandroid/issues/180).  This version also includes a security menu which allows users to [sign messages](https://github.com/decred/)dcrandroid/issues/226) proving ownership of addresses. Another community sourced innovation successfully implemented is the ["Hidden Account" feature](https://github.com/decred/dcrandroid/issues/175).  Hidden accounts allow mobile users to keep funds in their mobile wallet which will not be displayed on the main screen balance total.  Community members buying and selling Decred at local meetups are excited for the added privacy and security this feature offers.  Fund transfer between accounts also got an upgrade this month with simple [dropdown selection](https://github.com/decred/dcrandroid/issues/119) ensuring balance changes are quick and easy.
+Trezor: Model T firmware version 2.0.9 was [released](https://blog.trezor.io/firmware-updates-2-0-9-and-1-7-1-developed-by-the-community-for-the-community-c4b965741ca3) with Decred support. Cheers @matheusd for making it happen! Now our Decrediton developers can work on the integration.
+
+[Politeia](https://github.com/decred/politeia): A [small vulnerability](https://github.com/decred/politeia/issues/563) was patched, thanks to @iemlisted for reporting. [politeiavoter](https://github.com/decred/politeia/tree/master/politeiavoter) received privacy improvements {try to find a link}. By popular demand an [email notification system](https://github.com/decred/politeiagui/pull/919) was created to support awareness about new proposals and comments {pr 919 mentions comments only, was there another pr for new proposals?}. Verification of cast votes was made possible by the [search by ticket](https://github.com/decred/politeiagui/pull/899) feature {verify with devs and clarify that ticket search is client side and tickets are not sent to server to protect privacy}. Note that some of these features will be available on the [mainnet site](https://proposals.decred.org/) after the next deployment.
+
+[Two](https://github.com/decred/politeia/pull/613) [steps](https://github.com/decred/politeiagui/pull/906) completed towards the feature to [view diffs](https://github.com/decred/politeiagui/issues/754) between proposal revisions. Work started to add [highlighting new comments](https://github.com/decred/politeiagui/pull/897).
+
+[Android](https://github.com/decred/dcrandroid): Development of the Decred Wallet for Android made a leap forward this month with an pre-release version available on [Google Play Store](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet).  The Play Store version includes updated currency conversion that shows [fee in local currency](https://github.com/decred/dcrandroid/issues/192) and [advanced password protection](https://github.com/decred/dcrandroid/issues/134) with the ability to [lock all data](https://github.com/decred/dcrandroid/issues/187) and to use an [access pin code](https://github.com/decred/dcrandroid/issues/180). This version also includes a security menu which allows users to [sign messages](https://github.com/decred/dcrandroid/issues/226) proving ownership of addresses. Another community sourced innovation successfully implemented is the ["Hidden Account" feature](https://github.com/decred/dcrandroid/issues/175).  Hidden accounts allow mobile users to keep funds in their mobile wallet which will not be displayed on the main screen balance total.  Community members buying and selling Decred at local meetups are excited for the added privacy and security this feature offers.  Fund transfer between accounts also got an upgrade this month with simple [dropdown selection](https://github.com/decred/dcrandroid/issues/119) ensuring balance changes are quick and easy.
 
 [iOS](https://github.com/raedahgroup/dcrios): The iOS Mobile Wallet is currently in beta testing and will require additonal development cycles to incorporate the feature set available on Android.
 
-[dcrdata](https://github.com/decred/dcrdata): Our native [goLang block explorer](https://explorer.dcrdata.org) is becoming a one-stop shop for all data Decred. New features integrated into the base code this month include a [network hashrate chart](https://github.com/decred/dcrdata/issues/723), the addition of the [Decred Treasury](https://github.com/decred/dcrdata/issues/784) and more detailed transaction information like [spent with mempool txs](https://github.com/decred/dcrdata/issues/825), [tx type on address view]{https://github.com/decred/dcrdata/issues/741) and improved [timestamp information](https://github.com/decred/dcrdata/issues/776).  Community excitement has spurred a few additional features in [beta](https://beta.dcrdata.org) including [consensus voting results](https://beta.dcrdata.org/agendas), [xpub support](https://github.com/decred/dcrdata/issues/677), [transaction fee charts](https://github.com/decred/dcrdata/issues/671) and more. Stay tuned for further developments next month!
+[dcrdata](https://github.com/decred/dcrdata): New features integrated into the base code this month include a [network hashrate chart](https://github.com/decred/dcrdata/issues/723), the addition of the [Decred Treasury](https://github.com/decred/dcrdata/issues/784) to nav menu and more detailed transaction information like showing that [tx output is spent in mempool](https://github.com/decred/dcrdata/issues/825), [tx type on address view](https://github.com/decred/dcrdata/issues/741) and improved [timestamp information](https://github.com/decred/dcrdata/issues/776).
 
-[dcrstakepool](https://github.com/decred/dcrstakepool): The secure open source dcrstakepool package and recommended setup architecture helps ensure that Decred stakepools run with high effeciency.  The recent [README.md](https://github.com/decred/dcrstakepool/blob/master/README.md) improvement in the repository makes use and auditing easier than ever. This month various inititives to improve privacy and security began including replacement of 3rd party reCAPTCHA with a [self-hosted "no fingerprinting" CAPTCHA system](https://github.com/decred/dcrstakepool/pull/281), a [self-hosted charting liberary](https://github.com/decred/dcrstakepool/pull/283) to avoide Cloudflare and an [revamped login system](https://github.com/decred/dcrstakepool/issues/274) that would allow users to sign up without using email. Query and [lookup features were also redirected](https://github.com/decred/dcrstakepool/issues/264) from the Insight Block Explorer to [dcrdata](https://explorer.dcrdata.org) Community interested in testing are invited to follow the [GitHub issue links](https://github.com/decred/dcrstakepool/issues).
+On the dev side, @gozart started an epic refactoring effort to [convert](https://github.com/decred/dcrdata/pull/805) javascript codebase to ES6 modules, add webpack for front end dev tooling and production asset bundling, enforce code style and convert CSS to [SCSS partials](https://github.com/decred/dcrdata/pull/839).
 
-[Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): The Ticket Splitting Beta continued to grow during November with split tickets filled daily.  Additional content was for ease of use was added by both the original ticket splitting VSP [decredbrasil.com](https://stake.decredbrasil.com/) and the second VSP to add ticket splitting [decredvoting.com](https://decredvoting.com/).  Content incuded a [walk-through video](https://www.youtube.com/watch?v=3RGoUQK0g24&feature=share) in Portuguese and English, a general [ticket splitting overview](https://www.reddit.com/r/decred/comments/9vhpby/decred_ticket_splitting_overview/) and guides on both VSP sites.  The ticket splitting software was updated to support using with [wallets configured for SPV](https://github.com/matheusd/dcr-split-ticket-matcher/issues/29).  Ticket splitting support groups exist both on the [Decred Slack](https://decred.slack.com) and in the [Telegram Group](https://t.me/dcrticketsplit) where [VSP agnostic instructions](https://t.me/dcrticketsplit/2666) are availble.
+[dcrstakepool](https://github.com/decred/dcrstakepool): this is the software used by most, if not all VSPs. The README document was [updated](https://github.com/decred/dcrstakepool/pull/285) with build instructions for Go modules. Transaction links were changed from Insight to [dcrdata](https://github.com/decred/dcrstakepool/issues/264).
+
+Several privacy issues were discovered and discussed. A patch is being tested to replace Google recaptcha with [self-hosted CAPTCHA](https://github.com/decred/dcrstakepool/pull/281) to avoid fingerprinting of stakeholders. VSP operators are welcome to join testing. Request to Cloudflare [was removed](https://github.com/decred/dcrstakepool/pull/283). An issue to [make email optional](https://github.com/decred/dcrstakepool/issues/274) was raised.
+
+[Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): The Ticket Splitting Beta continued to grow during November with split tickets filled daily. Two VSPs that integrated ticket splitting, [decredbrasil.com](https://stake.decredbrasil.com/) and [decredvoting.com](https://decredvoting.com/), released educational [walk-through video](https://www.youtube.com/watch?v=3RGoUQK0g24) in Portuguese and English and a general [ticket splitting overview](https://www.reddit.com/r/decred/comments/9vhpby/decred_ticket_splitting_overview/), in addition to guides on their sites. The software was updated to support SPV light mode. Please read the [issue](https://github.com/matheusd/dcr-split-ticket-matcher/issues/29) to consider privacy implications.
+
+Ticket splitting support groups exist both on the [Decred Slack](https://decred.slack.com) and in the [Telegram Group](https://t.me/dcrticketsplit) where [VSP agnostic instructions](https://t.me/dcrticketsplit/2666) are availble.
 
 design:
 * https://medium.com/@firethought/base-iconset18-motion-pack-readme-a96f96e868
 
-[docs](https://github.com/decred/dcrdocs): November was a huge month for documentation with a variety of community supported changes and updates.  The [VSP rebranding proposal](https://proposals.decred.org/proposals/522652954ea7998f3fca95b9c4ca8907820eb785877dcf7fba92307131818c75) passed which confirmed a community desire to change “PoS Mining” to “(PoS) Voting”, and from “stakepool” to “Voting Service Provider (VSP)” in all Decred documentation.  Updates included [changes to general documentation](https://github.com/decred/dcrdocs/pull/590) and to the [stakepool page](https://github.com/decred/dcrdocs/pull/724). Updates were made to [adopt the standard "Decred Treasury"](https://github.com/decred/dcrdocs/pull/690) for the address that holds the self-funding block reward. For those looking to take a deeper dive into Politeia a new [Navigating Politeia Data](https://docs.decred.org/advanced/navigating-politeia-data/) advanced document was created this month. The often requested and long awaited [Decred Glossary](https://github.com/decred/dcrdocs/pull/675) was completed and published this month in part due to a huge effort by @s_ben and many people who supported the work with feedback and suggestions.  We highly recommend utilizing [the glossary](https://docs.decred.org/glossary/) to improve our shared community understanding.
+[docs](https://github.com/decred/dcrdocs): November was a huge month for documentation with a variety of community supported changes and updates.  The [VSP change language proposal](https://proposals.decred.org/proposals/522652954ea7998f3fca95b9c4ca8907820eb785877dcf7fba92307131818c75) passed which confirmed a community desire to change "PoS Mining" to "PoS Voting", and from "stakepool" to "Voting Service Provider (VSP)" in all Decred documentation.  Updates included [changes to general documentation](https://github.com/decred/dcrdocs/pull/590) and to the [stakepool page](https://github.com/decred/dcrdocs/pull/724). Updates were made to [adopt the term "Decred Treasury"](https://github.com/decred/dcrdocs/pull/690) for the special address that holds funds coming from the 10% of the block rewards {better wording possible}. For those looking to take a deeper dive into Politeia a new [Navigating Politeia Data](https://docs.decred.org/advanced/navigating-politeia-data/) advanced document was created. The often requested and long awaited [Decred Glossary](https://github.com/decred/dcrdocs/pull/675) was completed and published this month in part due to a huge effort by @s_ben and many people who supported the work with feedback and suggestions.  We highly recommend utilizing [the glossary](https://docs.decred.org/glossary/) to improve our shared community understanding.
 
 [decred.org](https://github.com/decred/dcrweb):
 
