--- a/journal/201811.md
+++ b/journal/201811.md
@@ -120,7 +120,7 @@ Update from Luxor pool:
 
 New VSPs:
 
-* [decred.staked.us](https://decred.staked.us/) with 5% fee.
+* [decred.staked.us](https://decred.staked.us/) with 5% fee. [Staked](https://staked.us/about/) is a company that provides staking services for [multiple](https://staked.us/yields/) cryptocurrencies and has recently [published](https://medium.com/coinmonks/decred-staking-guide-2e569d0390ff) a guide how to stake Decred using their VSP.
 * [dcrpool.dittrex.com](https://dcrpool.dittrex.com) with 1% fee.
 
 {new items of infrastructure or news from existing ones}
@@ -342,11 +342,8 @@ https://twitter.com/laurashin/status/1059791476102754305
 
 Regular security reminder: SMS, and relying on mobile operators in general, is bad choice for 2FA. Good to see lawsuits [like this](https://www.coindesk.com/victims-sue-att-t-mobile-over-sim-swap-crypto-hacks/) starting but they won't get your coins back. Speaking even more generally, most smartphones have a [baseband chip](https://en.wikipedia.org/wiki/Baseband_processor) and other proprietary parts that nobody really knows what they are doing or how vulnerable they are. Keep your coins safe.
 
-Copay/Bitpay got hacked, if you used this wallet or its derivative, you may need to move your coins to a new seed. The cause was repository compromise of one of its NPM dependencies. Details here:
+Copay wallet was infected with malware to steal cryptocurrency. If you used this wallet or its derivative, you may need to move your coins to a new seed. This [coverage](https://thehackernews.com/2018/11/nodejs-event-stream-module.html) includes details like affected software and versions. The cause was repository compromise of one of the npm dependencies. No known Decred software was affected.
 
-* https://twitter.com/somsenruben/status/1067250401873776645
-* https://twitter.com/lopp/status/1067129907501826048
-* Decred software was not affected by this hack.
 }
 
 ## About This Issue
