--- a/journal/201811.md
+++ b/journal/201811.md
@@ -18,11 +18,11 @@ Amidst the excitement, growth and change in the community, Decred development co
 
 * {not clear from pr 1320 that it has something to do with config defaults or config file}
 
-[Decrediton](https://github.com/decred/decrediton): To ensure continued cross-platform stability and performance Decrediton was [updated to Electron 3](https://github.com/decred/decrediton/pull/1777). Display of the Decred [Treasury balance](https://github.com/decred/decrediton/pull/1777) was added. Startup performance of [large wallets](https://github.com/decred/decrediton/pull/1727) was improved. Automatic ticket buying was switched to [ticketbuyer v2](https://github.com/decred/decrediton/pull/1744). It has less options and is simpler to use than v1 thanks to the stabilized ticket prices. Now all user needs to specify is balance to maintain, account and stakepool to use. Politeia integration saw improvements as well including [more responsive](https://github.com/decred/decrediton/pull/1825) proposal loading and [notifications for new proposals and votes](https://github.com/decred/decrediton/pull/1835). The UI/UX saw some tuneups this month including [overview design improvements](https://github.com/decred/decrediton/issues/1818), updated [account icons](https://github.com/decred/decrediton/issues/1811) and improvements to the [navigation icons and microanimations](https://github.com/decred/decrediton/issues/1809). The features mentioned were merged into the master branch and will be available in the next release of Decrediton.
+[Decrediton](https://github.com/decred/decrediton): To ensure continued cross-platform stability and performance Decrediton was [updated to Electron 3](https://github.com/decred/decrediton/pull/1777). Display of the Decred [Treasury balance](https://github.com/decred/decrediton/pull/1764) was added. Startup performance of [large wallets](https://github.com/decred/decrediton/pull/1727) was improved. Automatic ticket buying was switched to [ticketbuyer v2](https://github.com/decred/decrediton/pull/1744). It has less options and is simpler to use than v1 thanks to the stabilized ticket prices. Now all user needs to specify is balance to maintain, account and stakepool to use. Politeia integration saw improvements as well including [more responsive](https://github.com/decred/decrediton/pull/1825) proposal loading and [notifications for new proposals and votes](https://github.com/decred/decrediton/pull/1835). The UI/UX saw some tuneups this month including [overview design improvements](https://github.com/decred/decrediton/issues/1818), updated [account icons](https://github.com/decred/decrediton/issues/1811) and improvements to the [navigation icons and microanimations](https://github.com/decred/decrediton/issues/1809). The features mentioned were merged into the master branch and will be available in the next release of Decrediton.
 
 Trezor: Model T firmware version 2.0.9 was [released](https://blog.trezor.io/firmware-updates-2-0-9-and-1-7-1-developed-by-the-community-for-the-community-c4b965741ca3) with Decred support. Cheers @matheusd for making it happen! Now our Decrediton developers can work on the integration.
 
-[Politeia](https://github.com/decred/politeia): A [small vulnerability](https://github.com/decred/politeia/issues/563) was patched, thanks to @iemlisted for reporting. [politeiavoter](https://github.com/decred/politeia/tree/master/politeiavoter) received privacy improvements {try to find a link}. By popular demand an [email notification system](https://github.com/decred/politeiagui/pull/919) was created to support awareness about new proposals and comments {pr 919 mentions comments only, was there another pr for new proposals?}. Verification of cast votes was made possible by the [search by ticket](https://github.com/decred/politeiagui/pull/899) feature {verify with devs and clarify that ticket search is client side and tickets are not sent to server to protect privacy}. Note that some of these features will be available on the [mainnet site](https://proposals.decred.org/) after the next deployment.
+[Politeia](https://github.com/decred/politeia): A [small vulnerability](https://github.com/decred/politeia/issues/563) was patched, thanks to @iemlisted for reporting. [politeiavoter](https://github.com/decred/politeia/tree/master/politeiavoter) received privacy improvements {try to find a link}. By popular demand an [email notification system](https://github.com/decred/politeiagui/pull/919) was created to support awareness about new proposals and comments {pr 919 mentions comments only, was there another pr for new proposals?}. Verification of cast votes was made possible by the [search by ticket](https://github.com/decred/politeiagui/pull/899) feature {verify with devs and clarify that ticket search is client side and tickets are not sent to server to protect privacy}. "Finished" tab was [split](https://github.com/decred/politeiagui/issues/904) into "Approved" and "Rejected" tabs. Note that some of these features will be available on the [mainnet site](https://proposals.decred.org/) after the next deployment.
 
 [Two](https://github.com/decred/politeia/pull/613) [steps](https://github.com/decred/politeiagui/pull/906) completed towards the feature to [view diffs](https://github.com/decred/politeiagui/issues/754) between proposal revisions. Work started to add [highlighting new comments](https://github.com/decred/politeiagui/pull/897).
 
