processed part of integrations - added appcivico

--- a/journal/201811.md
+++ b/journal/201811.md
@@ -107,10 +107,9 @@ Competitor Bitmain announced the Decred [Antminer DR5](https://shop.bitmain.com.
 
 ## Integrations
 
-Update from Luxor pool:
+Luxor pool announced a 3-5% hashrate boost for Decred miners on November 26th on [Twitter](https://twitter.com/LuxorTechTeam/status/1067110171057381376) and on Matrix in [#pow-mining](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$154325337225556ClvOt:decred.org).
 
-> Hey Decred pow miners, we made an improvement to the Luxor mining pool over the weekend and most miners should see a hashrate boost of 3-5%.  Hope it helps in these terrible market conditions! (@NickH in [#pow-mining](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$154325337225556ClvOt:decred.org))
-
+[Appcivico](https://appcivico.com/pt/), a Brazilian company working on political transparency and accountibility through blockchain anchoring, [accounced the first Presidential candidate](https://t.co/iUu4MSrBuF) to utlize their campaign finance transparency system.  Marina Silva, while failing to become the second female president in Brasil, became the first candidate to utilze the [Voto Legal system](https://votolegal.com.br/) joining ~130 candidates in smaller races who voluntarily stamp all political contribution data into the Decred blockchain.
 
 New VSPs:
 
