Add coverage of BCH fork

--- a/journal/201811.md
+++ b/journal/201811.md
@@ -283,33 +283,15 @@ Zcash is [looking into](https://forum.zcashcommunity.com/t/announcing-zcash-blos
 
 {governance, forks
 
-{richardred BCH forks
-* Bitcoin Cash, born as a solution to disagreement with Bitcoin, is splitting into 2 chains (correct?). SV = Satoshi's Vision? Again?
-* (does the community split or is it a horror story by the media?)
-* explain 1) why they are forking, 2) vision and tech behind SV and ABC, 3) people, companies and capital behind both
-* what has Cobra to do with it?
-* https://www.forbes.com/sites/billybambrough/2018/11/05/looming-fork-pushed-bitcoin-cash-up-almost-40-over-the-weekend-heres-why/
-* https://news.bitcoin.com/discussions-intensify-as-bch-fork-approaches/
-* nice overview https://medium.com/circle-research/bitcoin-cash-hard-fork-report-4e4377d514a
-  * both projects get individually weaker
-  * SV is quite aggressive to ABC and hopes to dedicate some hashrate to mining empty blocks on the ABC chain (and not to secure the SV chain)
-* nice high-level overview: https://bitcoinmagazine.com/articles/when-fork-forks-what-you-need-know-bitcoin-cash-goes-war/
-* https://cash.coin.dance/ nice site for following the "hash war"
-* Live stream which ran for 8 hours with appearances from Vitalik, Emin Gun Sirer, others: https://www.youtube.com/watch?v=SxeeQ_-QVNo
-* Nice thread with resources https://www.reddit.com/r/btc/comments/9xasgg/bitcoin_cash_hard_fork_mega_thread/
-* Poloniex [allowed](https://poloniex.freshdesk.com/support/solutions/articles/1000270700-update-on-the-upcoming-bitcoin-cash-hard-fork) users to trade betwen both possible outcomes of the Bitcoin Cash fork. This led to the presence of _three_ tokens on the exchange: BCH, BCHABC nad BCHSV, with the latter two being 90% cheaper than BCH. Forks just keep spawning when you don't have a formal process to resolve disputes.
-* It appears some forces are tearing apart Bitcoin Cash. Whatever they are, let us keep Decred resistant to them.
-* contrast with how Decred works
-* https://medium.com/@carsten71071/what-are-my-options-as-a-bch-holder-before-the-upcoming-bch-hash-war-f74138b96065
-* both mining at a loss https://cointelegraph.com/news/bitmex-analysts-both-camps-in-bch-hash-war-are-mining-at-major-loss
-* https://medium.com/@richardred/hash-war-theater-67d3fcac3e97
-* note how coin holders are yet again not asked for what they want, while miners, developers and exchanges, and even miners from other SHA-256 chains (Bitcoin) could influence the outcome.
-* both chains are losing hashrate since the splithttps://cash.coin.dance/blocks/hashrate
-}
+Bitcoin Cash, born as a solution to the long-running Bitcoin scaling debate, itself had a contentious hard fork this month. This [article](https://bitcoinmagazine.com/articles/when-fork-forks-what-you-need-know-bitcoin-cash-goes-war/) has a good summary of what the fork was about. The sides came to be referred to by their dominant software implementation, Bitcoin ABC and Bitcoin Satoshi's Vision. BCH ABC was planning a hard fork to add canonical transaction ordering and a new OP code - BCH SV rejects these changes and plans instead to return to a set of rules based on Bitcoin version 0.1.0. 
 
-Alternative way do resolve disputes: attack wrong chains
+Miners and oracles seemed to be split relatively evenly between the two sides, with Roger Ver and Jihan Wu on the ABC side and Craig S Wright and Calvin Ayre on the BCH SV side. This contentious hard fork was even more contentious than most, as the BCH SV side announced that they would nullify the replay protection added by ABC (another [good article](https://medium.com/circle-research/bitcoin-cash-hard-fork-report-4e4377d514a) about the run-up to the fork). SV actually planned to mitigate ABC's replay protection by allowing miners to collect any BCH transferred using the new ABC OP codes - so that the use of these new features would result in the loss of BCH on the SV chain. There were also threats to attack the ABC chain and kill it, or make it unusable for long periods, should the SV chain have sufficient hashpower. 
 
-* https://www.ccn.com/war-bitcoin-cash-startup-launches-mining-pool-to-attack-altcoins-bch-forks/
+This [post on /r/btc](https://www.reddit.com/r/btc/comments/9xasgg/bitcoin_cash_hard_fork_mega_thread/) compiled a list of resources for following the fork as it played out. The [cash.coin.dance](https://cash.coin.dance/) site has a number of tools for keeping track of the fork in real-time. This [article](https://bitcoinmagazine.com/articles/one-day-after-bitcoin-cash-hard-fork-takeaways-and-latest-developments/) has a good report from 24 hours after the fork. @richard-red has written a short perspective on this [Hash War Theatre](https://medium.com/@richardred/hash-war-theater-67d3fcac3e97) also. On Nov 26 the SV side backed off and declared that the hash war was [over](https://coingeek.com/original-bitcoin-reborn-bitcoin-sv-bsv-bch-hash-war-ends/), they would allow both chains to co-exist in peace. With both chains seemingly being allowed to co-exist by the balance of mining power, it seems like the costs in this case are to be expressed primarily in terms of community fragmentation and aggravation. The BCH community in this case did not really have a role to play or way to affect the outcome, it was one for the miners to hash out.
+
+Feels good to have Decred tickets that can be used to prevent sustained contentious chain splits, and to punish miners who turn the chain into a vehicle for their own power plays, should that ever become a problem.
+
+This month also saw the launch of [SharkPool](https://www.ccn.com/war-bitcoin-cash-startup-launches-mining-pool-to-attack-altcoins-bch-forks/), a startup which aims to attack other Bitcoin forked chains by mining empty blocks and selling the profits for BCH.
 
 There appears to be some drama in the RChain community, involving people being laid off and a possible fork. It is difficult to find any sources about this beyond this [blog post](https://joshyorndorff.com/blog/keeping-the-rchain-community-together).  This is not the first internal conflict for RChain, since it itself was born out of a disagreement inside Synereo project which has led to a split in the past. {#governance link}
 
