removed template info

--- a/journal/201811.md
+++ b/journal/201811.md
@@ -90,7 +90,7 @@ Low quality proposals cluttering Politeia were discussed in depth and multiple i
 
 ## Network
 
-Hashrate: {start, end, low, high, variation; pool distribution} November's hashrate opened at around 156 PH/s and closed around 159 PH/s, reaching the low of ca. 125 PH/s and high of ca. 234 PH/s in between. BeePool's share varied between 19-30%, F2Pool 15-46%, Luxor 1.6-4%, and Coinmine 1.9-4%. Unknown hashrate stayed between 25-50% with lows of 15% and spikes to 75%. Pool distribution numbers are approximate and cannot be accurately determined.
+Hashrate: November's hashrate opened at around 156 PH/s and closed around 159 PH/s, reaching the low of ca. 125 PH/s and high of ca. 234 PH/s in between. BeePool's share varied between 19-30%, F2Pool 15-46%, Luxor 1.6-4%, and Coinmine 1.9-4%. Unknown hashrate stayed between 25-50% with lows of 15% and spikes to 75%. Pool distribution numbers are approximate and cannot be accurately determined.
 
 Staking: {30-day average tix price, low, high, locked DCR million and % of avail supply}
 
